# oscillot_old_gl

./: .gitignore  Cargo.toml  build.rs
src/: main.rs
src/resources/: oscillot.gresource.xml
src/resources/gtk/: menus.ui
src/resources/shaders/: scope.glslf  scope.glslv
src/resources/ui/: oscillot.css  oscillot.ui
