[package]
name = "oscillot"
version = "0.1.0"
authors = ["Colin Kinloch <colin@kinlo.ch>"]
build = "build.rs"

[dependencies]
gl = "0.5.0"
shared_library = "*"
libc = "*"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib.git"
version = "*"
[dependencies.gio]
git = "https://github.com/gtk-rs/gio.git"
version = "*"
features = ["v2_44"]
[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys.git"
version = "*"
[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk.git"
version = "*"
features = ["v3_16"]

[dependencies.epoxy]
git = "https://github.com/mjkoo/epoxy-rs.git"

[dependencies.rust-jack]
git = "https://github.com/nicklan/rust-jack.git"
